fix(localization): US market cleanup — rename bankIfscCode, remove INR default, wire CORS env var
- bankIfscCode -> bankRoutingNumber across all Java layers (entity, DTOs, service,
  auth); DB column bank_ifsc_code unchanged, bridged via @Column(name=...)
  Column length bumped 20->50; no Flyway migration needed
- LinkBankAccountRequest: ifscCode -> routingNumber; RazorpayGatewayAdapter
  keeps "ifsc" as the Razorpay API JSON key (gateway requirement)
- PaymentTransaction: removed @Builder.Default currency = "INR"; currency is
  always set explicitly from platform_settings — default was dead code
- SecurityConfig: wire corsConfigurationSource() to @Value app.cors.allowed-origins
  instead of hardcoded URL; new markets/deployments only need CORS_ALLOWED_ORIGINS
  env var update, no code change
- KycService: update Javadoc from AADHAAR/PAN/LICENSE -> DRIVER_LICENSE/PASSPORT/STATE_ID